# CaptionEvalKit-for-VLMs

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
benchmarks/: README.md
benchmarks/expected/bleu/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/cider/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/clipscore/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/expert/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/fleur/: composite.json  flickr8k-cf.json  flickr8k-ex.json
benchmarks/expected/meteor/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/pacscore/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/polos/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/refclipscore/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/reffleur/: composite.json  flickr8k-cf.json  flickr8k-ex.json
benchmarks/expected/refpacscore/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/rouge/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/spice/: composite.json  flickr8k-cf.json  flickr8k-ex.json  nebula.json  polaris.json
benchmarks/expected/vela/: longcaparena-testa-desc.json  longcaparena-testa-flu.json  longcaparena-testa-rel.json  longcaparena-testb-desc.json  longcaparena-testb-flu.json  longcaparena-testb-rel.json
capevalkit/: __init__.py  api.py  benchmarks.py  cli.py  compat.py  context.py  correlations.py  dispatcher.py  downloads.py  launcher.py  manifests.py  overlays.py  paths.py  reproduce.py  runtime.py  verify.py
capevalkit/application/: __init__.py
capevalkit/application/ports/: __init__.py  metric_manifest_repository.py  metric_runner.py  runtime_gateway.py
capevalkit/application/use_cases/: __init__.py  cli_commands.py
capevalkit/domain/: __init__.py
capevalkit/domain/benchmarks/: __init__.py  models.py
capevalkit/domain/evaluation/: __init__.py  correlations.py  policies.py
capevalkit/domain/metrics/: __init__.py  manifest.py
capevalkit/domain/reproduction/: __init__.py  models.py  policies.py
capevalkit/infrastructure/assets/: downloads.py
capevalkit/infrastructure/benchmarks/: __init__.py  legacy.py
capevalkit/infrastructure/execution/: __init__.py  dispatcher.py  progress.py  uv_subprocess_metric_runner.py
capevalkit/infrastructure/manifests/: __init__.py  catalog.py  toml_metric_manifest_repository.py
capevalkit/infrastructure/runtime/: __init__.py  context.py  environment.py  git_runtime_gateway.py  manager.py
capevalkit/interfaces/: __init__.py  cli.py  launcher.py  python_api.py  reproduction.py
capevalkit/metrics/: __init__.py  clipscore_metric.py  expert_metric.py  fleur_metric.py  jaspice_metric.py  pacscore_metric.py  polos.py  polos_validate.py  pycocoevalcap_metrics.py  vela_metric.py
capevalkit/resources/: upstreams.lock.json
docs/: assets.md
metrics/bleu/: metric.toml
metrics/cider/: metric.toml
metrics/clipscore/: metric.toml
metrics/clipscore-vitl/: metric.toml
metrics/clipscoreavg/: metric.toml
metrics/expert/: metric.toml
metrics/fleur/: metric.toml
metrics/jaspice/: metric.toml
metrics/meteor/: metric.toml
metrics/pacscore/: metric.toml
metrics/pacscore-vitl/: metric.toml
metrics/pacscoreavg/: metric.toml
metrics/pacscorepp/: metric.toml
metrics/pacscoreppavg/: metric.toml
metrics/polos/: metric.toml
metrics/refclipscore/: metric.toml
metrics/refclipscore-vitl/: metric.toml
metrics/reffleur/: metric.toml
metrics/refpacscore/: metric.toml
metrics/refpacscore-vitl/: metric.toml
metrics/refpacscorepp/: metric.toml
metrics/rouge/: metric.toml
metrics/spice/: metric.toml
metrics/vela/: metric.toml
overlays/metrics/upstreams/clipscore/: pyproject.toml  uv.toml
overlays/metrics/upstreams/expert/: pyproject.toml
overlays/metrics/upstreams/expert/LLaVA/llava/model/: builder.py
overlays/metrics/upstreams/fleur/: pyproject.toml
overlays/metrics/upstreams/fleur/fleur_wrapper/: __init__.py
overlays/metrics/upstreams/jaspice/: pyproject.toml  uv.toml
overlays/metrics/upstreams/pacscore/: pyproject.toml
overlays/metrics/upstreams/polos/: pyproject.toml
overlays/metrics/upstreams/polos/polos/models/: model_base.py
overlays/metrics/upstreams/polos/polos/models/encoders/: __init__.py  bert.py
overlays/metrics/upstreams/polos/polos/models/estimators/: polos_estimator.py
overlays/metrics/upstreams/polos/polos/tokenizers_/: __init__.py
overlays/metrics/upstreams/pycocoevalcap/: pyproject.toml
overlays/metrics/upstreams/vela/: pyproject.toml
overlays/metrics/upstreams/vela/configs/: config_regressor.yaml
scripts/: generate_upstream_lock.py  smoke_dist.sh
tests/: test_architecture.py  test_downloads.py
