[project]
name = "capevalkit"
version = "0.1.0"
description = "A reproducible caption-evaluation toolkit for VLMs with per-metric uv environments."
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause-Clear"
license-files = ["LICENSE"]
authors = [
    { name = "Yuiga Wada" },
]
maintainers = [
    { name = "Yuiga Wada" },
]
keywords = [
    "caption-evaluation",
    "vision-language-models",
    "vlm",
    "metrics",
    "reproducibility",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "datasets>=2.19,<4",
    "pillow>=10",
    "rich>=13",
    "tomli>=2; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/YuigaWada/CaptionEvalKit-for-VLMs"
Repository = "https://github.com/YuigaWada/CaptionEvalKit-for-VLMs"
Issues = "https://github.com/YuigaWada/CaptionEvalKit-for-VLMs/issues"

[project.scripts]
capevalkit = "capevalkit.launcher:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.cache",
    "/.hf-cache",
    "/.model-cache",
    "/.uv-cache",
    "/data",
    "/dist",
    "/envs",
    "/metrics/upstreams",
    "/outputs",
    "/self-distillation-smoothing",
    "/**/__pycache__",
    "/**/*.py[cod]",
]

[tool.hatch.build.targets.wheel]
packages = ["capevalkit"]

[tool.hatch.build.targets.wheel.force-include]
"metrics/bleu" = "capevalkit/resources/metrics/bleu"
"metrics/cider" = "capevalkit/resources/metrics/cider"
"metrics/clipscore" = "capevalkit/resources/metrics/clipscore"
"metrics/clipscore-vitl" = "capevalkit/resources/metrics/clipscore-vitl"
"metrics/clipscoreavg" = "capevalkit/resources/metrics/clipscoreavg"
"metrics/expert" = "capevalkit/resources/metrics/expert"
"metrics/fleur" = "capevalkit/resources/metrics/fleur"
"metrics/jaspice" = "capevalkit/resources/metrics/jaspice"
"metrics/meteor" = "capevalkit/resources/metrics/meteor"
"metrics/pacscore" = "capevalkit/resources/metrics/pacscore"
"metrics/pacscore-vitl" = "capevalkit/resources/metrics/pacscore-vitl"
"metrics/pacscoreavg" = "capevalkit/resources/metrics/pacscoreavg"
"metrics/pacscorepp" = "capevalkit/resources/metrics/pacscorepp"
"metrics/pacscoreppavg" = "capevalkit/resources/metrics/pacscoreppavg"
"metrics/polos" = "capevalkit/resources/metrics/polos"
"metrics/refclipscore" = "capevalkit/resources/metrics/refclipscore"
"metrics/refclipscore-vitl" = "capevalkit/resources/metrics/refclipscore-vitl"
"metrics/reffleur" = "capevalkit/resources/metrics/reffleur"
"metrics/refpacscore" = "capevalkit/resources/metrics/refpacscore"
"metrics/refpacscore-vitl" = "capevalkit/resources/metrics/refpacscore-vitl"
"metrics/refpacscorepp" = "capevalkit/resources/metrics/refpacscorepp"
"metrics/rouge" = "capevalkit/resources/metrics/rouge"
"metrics/spice" = "capevalkit/resources/metrics/spice"
"metrics/vela" = "capevalkit/resources/metrics/vela"
"overlays" = "capevalkit/resources/overlays"
"benchmarks/expected" = "capevalkit/resources/benchmarks/expected"
"capevalkit/resources/upstreams.lock.json" = "capevalkit/resources/upstreams.lock.json"
