[project]
name = "capevalkit-env-polos"
version = "0.1.0"
requires-python = ">=3.9,<3.11"
dependencies = [
    "click>=8.1.7",
    "ftfy>=6.1.1",
    "matplotlib",
    "numpy<2",
    "pandas",
    "pillow",
    "protobuf<3.20.0",
    "pycocoevalcap",
    "pycocotools",
    "pytorch-lightning<=1.3",
    "pytorch-nlp==0.5.0",
    "PyYAML>=5.3",
    "regex",
    "scikit-learn",
    "scipy",
    "torch",
    "torchmetrics<0.6",
    "torchvision",
    "tomli>=2; python_version < '3.11'",
    "tqdm",
    "transformers>=4,<5",
    "wandb",
]

[tool.uv]
package = false
