[project]
name = "capevalkit-env-vela"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate>=1.8.1,<2",
    "ftfy>=6.3.1,<7",
    "huggingface-hub",
    "hydra-core==1.0.7",
    "mpmath",
    "numpy<2",
    "omegaconf",
    "open-clip-torch>=2.32.0,<3",
    "pandas>=2.3.1,<3",
    "peft>=0.16.0,<0.17",
    "pillow>=11.3.0,<12",
    "safetensors",
    "scipy>=1.13.1,<2",
    "setuptools<81",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "torchvision==0.17.2",
    "tomli>=2; python_version < '3.11'",
    "tqdm",
    "transformers>=4.53.2,<5",
    "wandb>=0.21.0,<0.22",
]

[tool.uv]
package = false
